--- a/src/Components/ScoreHolder.css
+++ b/src/Components/ScoreHolder.css
@@ -8,7 +8,7 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	border-radius: 50px;
-	box-shadow: 3px 3px rgb(197, 197, 197);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	height: 60vh;
 	width: 70vw;
 }
