--- a/src/Components/ScoreHolder.css
+++ b/src/Components/ScoreHolder.css
@@ -2,7 +2,7 @@
 	position: absolute;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-evenly;
 	background-color: rgb(253, 253, 253);
 	top: 50%;
 	left: 50%;
@@ -11,4 +11,8 @@
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	height: 60vh;
 	width: 70vw;
+}
+
+h1 {
+	font-size: 4rem;
 }
