--- a/src/Components/Score.css
+++ b/src/Components/Score.css
@@ -4,8 +4,8 @@
 	background: #f4f4f4;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 50px;
-	width: 15%;
-	height: 65%;
+	width: 12vw;
+	height: 37vh;
 	align-items: center;
 }
 
