--- a/src/Components/StartGame.css
+++ b/src/Components/StartGame.css
@@ -1,8 +1,4 @@
 .holder {
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: space-evenly;
 	background-color: rgb(253, 253, 253);
 	top: 50%;
 	left: 50%;
@@ -18,16 +14,29 @@
 	top: 0;
 }
 
+.container {
+	position: absolute;
+	top: 7rem;
+	display: flex;
+	align-items: center;
+}
+
 .player-input {
 	background: #f4f4f4;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 50px;
 	width: 12rem;
 	text-align: center;
+	margin: 3rem;
 }
 
-.player-input h2 {
+.player-input input {
 	outline: none;
+	border: none;
+	font-family: var(--Lexend);
+	background: transparent;
+	font-size: 1.5rem;
+	padding: 1rem;
 }
 
 /* Dropdown Button */
@@ -45,7 +54,7 @@
 .dropdown {
 	position: absolute;
 	display: inline-block;
-	bottom: 5rem;
+	bottom: 11rem;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -58,19 +67,20 @@
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	border-bottom-right-radius: 40px;
 	border-bottom-left-radius: 40px;
-	/* z-index: 1; */
+	z-index: 1;
 }
 
 /* Links inside the dropdown */
-.dropdown-content a {
+.dropdown-content span {
 	color: black;
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
+	cursor: pointer;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {
+.dropdown-content span:hover {
 	color: gray;
 	border-bottom-right-radius: 50px;
 	border-bottom-left-radius: 50px;
@@ -79,4 +89,27 @@
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
 	display: block;
+}
+
+.b {
+	position: absolute;
+	display: inline-block;
+	bottom: 6rem;
+}
+
+.button-start {
+	background: white;
+	border: none;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	border-radius: 50%;
+	font-size: 2rem;
+	height: 3rem;
+	width: 3rem;
+	outline: none;
+	cursor: pointer;
+	position: absolute;
+	bottom: 2rem;
+	right: 2rem;
+	display: flex;
+	align-items: center;
 }
