--- a/src/Components/Score.css
+++ b/src/Components/Score.css
@@ -38,3 +38,8 @@
 	pointer-events: none;
 	filter: blur();
 }
+
+.winner {
+	background: rgb(176, 255, 169);
+	box-shadow: 0px 4px 4px rgba(176, 255, 169, 0.25);
+}
