--- a/src/Components/ScoreHolder.css
+++ b/src/Components/ScoreHolder.css
@@ -1,25 +1,36 @@
-.holder {
+.score-holder {
 	position: absolute;
-	display: flex;
+	display: grid;
+	grid-template-areas:
+		"game   game   game"
+		"score1 mid    score2";
+	justify-items: center;
 	align-items: center;
-	justify-content: space-evenly;
 	background-color: rgb(253, 253, 253);
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	border-radius: 50px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	height: 60vh;
-	width: 70vw;
+	height: 30rem;
+	width: 60rem;
 }
 
 .game-type {
-	position: absolute;
-	top: 0;
+	grid-area: game;
+}
+
+.score1 {
+	grid-area: score1;
 }
 
 .middle {
 	text-align: center;
+	grid-area: mid;
+}
+
+.score2 {
+	grid-area: score2;
 }
 
 h1 {
@@ -29,9 +40,14 @@ h1 {
 /*              Viewport less then or equal to 750px            */
 
 @media only screen and (max-width: 750px) {
-	.holder {
+	.score-holder {
 		height: 40rem;
-		width: 30rem;
+		width: 27rem;
+		grid-template-areas:
+			"game"
+			"score1"
+			"mid"
+			"score2";
 	}
 }
 
