--- a/src/Components/ScoreHolder.css
+++ b/src/Components/ScoreHolder.css
@@ -3,6 +3,7 @@
 	display: grid;
 	grid-template-areas:
 		"game   game   game"
+		"status status status"
 		"score1 mid    score2";
 	justify-items: center;
 	align-items: center;
@@ -14,6 +15,7 @@
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	height: 30rem;
 	width: 60rem;
+	padding-bottom: 5rem;
 }
 
 .game-type {
@@ -24,7 +26,11 @@
 	grid-area: score1;
 }
 
-.middle {
+.status {
+	grid-area: status;
+}
+
+.separator {
 	text-align: center;
 	grid-area: mid;
 }
@@ -43,11 +49,6 @@ h1 {
 	.score-holder {
 		height: 40rem;
 		width: 27rem;
-		grid-template-areas:
-			"game"
-			"score1"
-			"mid"
-			"score2";
 	}
 }
 
