--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,11 @@
 	src: url("./fonts/Lexend_Deca/LexendDeca-Regular.ttf");
 }
 
+html,
 body {
 	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 
