--- a/src/Components/History.css
+++ b/src/Components/History.css
@@ -13,7 +13,7 @@
 	border-radius: 50px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	height: 35rem;
-	width: 25rem;
+	width: 60rem;
 }
 
 .title {
@@ -41,3 +41,13 @@
 	background-color: #f4f4f4;
 	margin-bottom: 3rem;
 }
+
+/*              Viewport less then or equal to 750px            */
+
+@media only screen and (max-width: 750px) {
+	.history-holder {
+		width: 25rem;
+	}
+}
+
+/*        x      Viewport less then or equal to 750px       x     */
