--- a/src/Components/StartGame.css
+++ b/src/Components/StartGame.css
@@ -49,6 +49,50 @@
 
 .game {
 	grid-area: game;
+	width: 12rem;
+	text-align: center;
+	height: 4rem;
+}
+
+.rounds {
+	grid-area: rounds;
+	width: 12rem;
+	text-align: center;
+	height: 4rem;
+}
+
+.game-arrow {
+	position: relative;
+	right: 1.4rem;
+	bottom: 0rem;
+	font-size: 1rem;
+}
+
+.rounds-arrow {
+	position: relative;
+	right: -4.8rem;
+	bottom: 2.4rem;
+	font-size: 1rem;
+}
+
+#rounds,
+#game {
+	background: #f4f4f4;
+	border: none;
+	outline: none;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	border-radius: 50px;
+	padding: 1.2rem;
+	font-size: 1.5rem;
+	cursor: pointer;
+}
+
+.game select {
+	appearance: none;
+}
+
+.rounds select {
+	appearance: none;
 }
 
 .player-input input {
@@ -58,64 +102,6 @@
 	background: transparent;
 	font-size: 1.5rem;
 	padding: 1rem;
-}
-
-/* Dropdown Button */
-.dropbtn {
-	background: #f4f4f4;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	border-radius: 50px;
-	width: 12rem;
-	text-align: center;
-	border: none;
-	outline: none;
-	cursor: pointer;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-	display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-	display: none;
-	background-color: #f1f1f1;
-	position: absolute;
-	width: 12rem;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	border-bottom-right-radius: 40px;
-	border-bottom-left-radius: 40px;
-	z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content span {
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-	cursor: pointer;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content span:hover {
-	color: gray;
-	border-bottom-right-radius: 50px;
-	border-bottom-left-radius: 50px;
-}
-
-/* Show the dropdown menu on hover */
-.show .dropdown-content {
-	display: block;
-}
-
-.rounds {
-	grid-area: rounds;
-}
-
-.hide .dropdown-content {
-	display: none;
 }
 
 .button-start {
@@ -160,6 +146,19 @@
 	.player-input {
 		width: 9rem;
 		margin: 1rem;
+	}
+
+	.player1 {
+		margin-bottom: -1rem;
+	}
+
+	.player2 {
+		margin-top: -1rem;
+	}
+
+	.rounds-arrow {
+		right: 1.3rem;
+		bottom: 0rem;
 	}
 }
 
