--- a/src/Components/Score.css
+++ b/src/Components/Score.css
@@ -47,6 +47,11 @@
 	box-shadow: 0px 4px 4px rgba(176, 255, 169, 0.25);
 }
 
+.loser {
+	background: rgb(255, 169, 169);
+	box-shadow: 0px 4px 4px rgba(255, 169, 169, 0.25);
+}
+
 /*              Viewport less then or equal to 750px            */
 
 @media only screen and (max-width: 750px) {
