--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -1,6 +1,10 @@
 .about-holder {
 	background-color: rgb(253, 253, 253);
 	display: grid;
+	grid-template-areas:
+		"back   title"
+		"photo  photo"
+		"footer footer";
 	justify-items: center;
 	position: absolute;
 	left: 50%;
@@ -10,6 +14,49 @@
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	height: 35rem;
 	width: 60rem;
+}
+
+.about-back-button {
+	grid-area: back;
+	background: white;
+	border: none;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	border-radius: 50%;
+	font-size: 2rem;
+	height: 3rem;
+	width: 3rem;
+	outline: none;
+	cursor: pointer;
+	justify-self: start;
+	margin-left: 1.5rem;
+	margin-top: 3.5rem;
+	display: flex;
+	align-items: center;
+}
+
+.button-link {
+	color: black;
+}
+
+.button-link:hover {
+	transition: 0.00001s ease;
+	color: gray;
+}
+
+.about-title {
+	grid-area: title;
+	margin-left: -25rem;
+}
+
+.about-logo {
+	height: 20rem;
+	border-radius: 50px;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	grid-area: photo;
+}
+
+.footer {
+	grid-area: footer;
 }
 
 .link-link {
@@ -28,6 +75,11 @@
 @media only screen and (max-width: 750px) {
 	.about-holder {
 		width: 25rem;
+	}
+
+	.about-title {
+		margin-left: -11.7rem;
+		margin-right: 1.5rem;
 	}
 }
 
