--- a/src/Components/StartGame.css
+++ b/src/Components/StartGame.css
@@ -2,11 +2,10 @@
 	background-color: rgb(253, 253, 253);
 	display: grid;
 	grid-template-areas:
-		"heading heading heading"
+		"back heading heading"
 		"player1 vs      player2"
 		"game    game    game"
-		"rounds  rounds  rounds"
-		"null    null    button";
+		"rounds  rounds  button";
 	justify-items: center;
 	align-items: center;
 	position: absolute;
@@ -19,9 +18,36 @@
 	width: 60rem;
 }
 
+.start-back-button {
+	grid-area: back;
+	background: white;
+	border: none;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	border-radius: 50%;
+	font-size: 2rem;
+	height: 3rem;
+	width: 3rem;
+	outline: none;
+	cursor: pointer;
+	justify-self: start;
+	margin-left: 1.5rem;
+	display: flex;
+	align-items: center;
+}
+
+.button-link {
+	color: black;
+}
+
+.button-link:hover {
+	transition: 0.00001s ease;
+	color: gray;
+}
+
 .heading {
 	grid-area: heading;
 	font-size: 2.5rem;
+	margin-left: -27rem;
 }
 
 .player-input {
@@ -61,6 +87,10 @@
 	height: 4rem;
 }
 
+#rounds {
+	margin-left: 12.5rem;
+}
+
 .game-arrow {
 	position: relative;
 	right: 1.4rem;
@@ -70,7 +100,7 @@
 
 .rounds-arrow {
 	position: relative;
-	right: -4.8rem;
+	right: -16.8rem;
 	bottom: 2.4rem;
 	font-size: 1rem;
 }
@@ -89,10 +119,12 @@
 
 #rounds:hover {
 	color: gray;
+	transition: 0.00001s ease;
 }
 
 #game:hover {
 	color: gray;
+	transition: 0.00001s ease;
 }
 
 .game select {
@@ -128,28 +160,23 @@
 	margin-bottom: 2rem;
 }
 
-.button-link {
-	color: black;
-}
-
-.button-link:hover {
-	color: gray;
-}
-
 /*              Viewport less then or equal to 750px            */
 
 @media only screen and (max-width: 750px) {
 	.start-holder {
 		grid-template-areas:
-			"heading"
-			"player1"
-			"vs"
-			"player2"
-			"game"
-			"rounds"
-			"button";
+			"back heading"
+			"player1 player1"
+			"vs vs"
+			"player2 player2"
+			"game game"
+			"rounds button";
 		height: 50rem;
 		width: 25rem;
+	}
+
+	.heading {
+		margin-left: -13rem;
 	}
 
 	.heading,
@@ -170,9 +197,17 @@
 		margin-top: -1rem;
 	}
 
+	#rounds {
+		margin-left: 5rem;
+	}
+
 	.rounds-arrow {
-		right: 1.3rem;
-		bottom: 0rem;
+		right: -9rem;
+		bottom: 2.5rem;
+	}
+
+	.button-start {
+		margin-top: 2rem;
 	}
 }
 
