--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -53,10 +53,12 @@
 	border-radius: 50px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	grid-area: photo;
+	margin-top: -2rem;
 }
 
 .footer {
 	grid-area: footer;
+	margin-bottom: -1rem;
 }
 
 .link-link {
@@ -70,17 +72,76 @@
 	margin-top: 0;
 }
 
-/*              Viewport less then or equal to 750px            */
+/*              Viewport less then or equal to 768px            */
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 768px) {
 	.about-holder {
-		width: 25rem;
+		width: 40rem;
 	}
 
 	.about-title {
-		margin-left: -11.7rem;
-		margin-right: 1.5rem;
+		margin-left: -14rem;
 	}
 }
 
-/*        x      Viewport less then or equal to 750px       x     */
+/*        x      Viewport less then or equal to 768px       x     */
+
+/*              Viewport less then or equal to 520px            */
+
+@media only screen and (max-width: 520px) {
+	.about-holder {
+		width: 22rem;
+		height: 30rem;
+	}
+
+	.about-back-button {
+		margin-top: 1.5rem;
+	}
+
+	.about-logo {
+		height: 15rem;
+		margin-top: -2rem;
+	}
+
+	.about-title {
+		font-size: 3rem;
+		margin-top: 1.5rem;
+		margin-left: -10rem;
+	}
+
+	.footer {
+		margin-bottom: -2rem;
+	}
+}
+
+/*        x      Viewport less then or equal to 520px       x     */
+
+/*              Viewport less then or equal to 320px            */
+
+@media only screen and (max-width: 320px) {
+	.about-holder {
+		width: 18rem;
+		height: 30rem;
+	}
+
+	.about-back-button {
+		margin-top: 1.5rem;
+	}
+
+	.about-logo {
+		height: 15rem;
+		margin-top: -2rem;
+	}
+
+	.about-title {
+		font-size: 2.5rem;
+		margin-top: 1.5rem;
+		margin-left: -7rem;
+	}
+
+	.footer {
+		margin-bottom: -3rem;
+	}
+}
+
+/*        x      Viewport less then or equal to 320px       x     */
