--- a/src/Components/History.css
+++ b/src/Components/History.css
@@ -86,16 +86,59 @@
 	color: rgb(255, 169, 169);
 }
 
-/*              Viewport less then or equal to 750px            */
+/*              Viewport less then or equal to 768px            */
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 768px) {
 	.history-holder {
-		width: 25rem;
+		width: 39rem;
+		height: 30rem;
 	}
 
 	.title {
-		margin-left: -14rem;
+		margin-left: -18rem;
 	}
 }
 
-/*        x      Viewport less then or equal to 750px       x     */
+/*        x      Viewport less then or equal to 768px       x     */
+
+/*              Viewport less then or equal to 520px            */
+
+@media only screen and (max-width: 520px) {
+	.history-holder {
+		width: 20rem;
+		height: 30rem;
+	}
+
+	.title {
+		font-size: 2rem;
+		margin-left: -7.2rem;
+		margin-top: 2rem;
+	}
+
+	.hist-back-button {
+		margin-top: 1.8rem;
+	}
+}
+
+/*        x      Viewport less then or equal to 520px       x     */
+
+/*              Viewport less then or equal to 320px            */
+
+@media only screen and (max-width: 320px) {
+	.history-holder {
+		width: 18rem;
+		height: 32rem;
+	}
+
+	.title {
+		font-size: 2rem;
+		margin-left: -7.2rem;
+		margin-top: 2rem;
+	}
+
+	.hist-back-button {
+		margin-top: 1.8rem;
+	}
+}
+
+/*        x      Viewport less then or equal to 320px       x     */
