--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ html,
 body {
 	margin: 0;
 	padding: 0;
+	overflow: auto;
 	box-sizing: border-box;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
