--- a/src/Components/History.css
+++ b/src/Components/History.css
@@ -34,8 +34,30 @@
 	margin-top: 3.5rem;
 }
 
+.delete-button {
+	background: white;
+	border: none;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	border-radius: 50%;
+	font-size: 2rem;
+	height: 3rem;
+	width: 3rem;
+	outline: none;
+	cursor: pointer;
+	position: relative;
+	justify-self: end;
+	right: 1rem;
+	bottom: 1rem;
+	display: flex;
+	align-items: center;
+}
+
 .button-link {
 	color: black;
+}
+
+.button-delete {
+	color: grey;
 }
 
 .button-link:hover {
@@ -75,6 +97,7 @@
 	align-items: center;
 	width: 100%;
 	overflow-y: scroll;
+	position: relative;
 }
 
 .score-list {
