Adds placeholders for dark mode.

--- a/src/Components/SplashScreen.css
+++ b/src/Components/SplashScreen.css
@@ -1,5 +1,6 @@
 .splash-holder {
 	background-color: rgb(253, 253, 253);
+	/* background: rgb(78, 78, 78); */
 	display: grid;
 	grid-template-areas:
 		"logo"
