--- a/src/App.css
+++ b/src/App.css
@@ -752,6 +752,58 @@
 }
 
 /* x Score Holder x */
+/* Score  */
+.score {
+  display: -ms-grid;
+  display: grid;
+  background: #f4f4f4;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 50px;
+  width: 10rem;
+  height: 16rem;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 1rem;
+}
+
+.score .curr-score {
+  font-size: 4rem;
+}
+
+.score .button {
+  background: white;
+  border: none;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 50%;
+  font-size: 2rem;
+  height: 3rem;
+  width: 3rem;
+  outline: none;
+  cursor: pointer;
+}
+
+.score .button:hover {
+  color: gray;
+}
+
+.score .button .done {
+  pointer-events: none;
+}
+
+.score .minus {
+  margin-left: 0.5rem;
+}
+
+.score .player {
+  font-size: 2rem;
+  padding-top: 2.5rem;
+}
+
+/* x Score x */
 /*              Viewport less then or equal to 768px            */
 @media only screen and (max-width: 768px) {
   .splash-holder {
@@ -936,6 +988,22 @@
     height: 4rem;
     margin-top: -0.7rem;
   }
+  .score {
+    width: 6.5rem;
+    height: 15rem;
+  }
+  .score .plus {
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 1.5rem;
+    margin-right: 0;
+  }
+  .score .minus {
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 1.5rem;
+    margin-right: 0;
+  }
 }
 
 /*        x      Viewport less then or equal to 520px       x     */
@@ -1056,6 +1124,30 @@
     width: 5rem;
     height: 4rem;
     margin-top: -0.7rem;
+  }
+  .score {
+    width: 5rem;
+        grid-template-areas: "score" "plus" "minus";
+  }
+  .score .curr-score {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    grid-area: score;
+    margin-top: 0.5rem;
+    font-size: 3.5rem;
+  }
+  .score .plus {
+    -ms-grid-row: 2;
+    -ms-grid-column: 1;
+    grid-area: plus;
+    margin-left: 1rem;
+  }
+  .score .minus {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    grid-area: minus;
+    margin-top: 0.5rem;
+    margin-left: 1rem;
   }
 }
 
